--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,36 @@
     <string name="pressed" />
     <string name="Pressed">Pressed:-</string>
     <string name="clicky_clicky">Clicky Clicky</string>
+    <string name="zhangjin_pan_pan_zhan_northeastern_edu">Zhangjin Pan(pan.zhan@northeastern.edu)</string>
+    <string name="link_collector">Link Collector</string>
+    <string name="please_input_the_name_of_the_website">Please input the name of the website</string>
+    <string name="please_intput_the_link_of_the_website">Please intput the link of the website</string>
+    <string name="add_link">add_link</string>
+    <string name="confirm" />
+    <string name="cancel" />
+    <string name="addedSuccessful" />
+    <string name="addedFail" />
+    <string name="addlink">Input the Web Information</string>
+    <string name="add__link">Add Web Information</string>
+    <string name="addOK">Finish</string>
+    <string name="added_Fail">Invalid! Input Again.</string>
+    <string name="addFail">Close</string>
+    <string name="add___link">Add</string>
+    <string name="adlink">Add</string>
+    <string name="add1Fail">close111</string>
+    <string name="header">Add the website</string>
+    <string name="ok">ADD</string>
+    <string name="notok">CLOSE</string>
+    <string name="prime_directive" />
+    <string name="primeDirective">PRIME DIRECTIVE</string>
+    <string name="find_prime">Find Prime</string>
+    <string name="terminate_search">Terminate Search</string>
+    <string name="latest_prime_found">Latest Prime Found:</string>
+    <string name="current_number">Current Number</string>
+    <string name="current_numbe">"Current Number: "</string>
+    <string name="current_num">"Current Number: "</string>
+    <string name="pacifier_switch">Pacifier Switch</string>
+    <string name="current_numbers">Current Number:</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
 </resources>
